--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,5 +25,12 @@
 </table>
 
 <br>
+<%= link_to 'Users list', users_path%>
 
-<%= link_to 'New Post', new_post_path %>
+
+<% if user_signed_in?%>
+  <%= link_to 'Log out', destroy_user_session_path %>
+  <%= link_to 'New Post', new_post_path %>
+  <%else%>
+<%= link_to 'Sign up', new_user_registration_path %>
+<%end%>
