--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,12 +25,14 @@
 </table>
 
 <br>
-<%= link_to 'Users list', users_path%>
 
 
 <% if user_signed_in?%>
-  <%= link_to 'Log out', destroy_user_session_path %>
+  <%= link_to 'Log out', destroy_user_session_path, method: :delete%>
   <%= link_to 'New Post', new_post_path %>
+  <%= link_to 'Users list', users_path%>
+  <%=current_user.username%>
   <%else%>
 <%= link_to 'Sign up', new_user_registration_path %>
+<%= link_to 'Login', new_user_session_path%>
 <%end%>
