omni routes and link_to devise_registrations views

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,5 +30,6 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+<%= link_to 'Github signup',github_signup_path %>
 
 <%= render "devise/shared/links" %>
